tests/ui/traits/non_lifetime_binders/on-ptr.stderr
error: late-bound type parameter not allowed on function pointer types
  --> $DIR/on-ptr.rs:6:17
   |
LL | fn foo() -> for<T> fn(T) {
   |                 ^

error: aborting due to 1 previous error

